// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <NewsListing /> when isCondensed is false matches snapshot 1`] = `
<article
  class="NewsListing"
>
  <a
    href="/news/article-1"
  >
    <header
      class="NewsListing--header"
    >
      <h2>
        <div
          class="NewsArticleType NewsArticleType-news"
          title="News"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
        </div>
        <span>
          Title
        </span>
      </h2>
    </header>
    <figure
      class="Image NewsListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt="Title"
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <p>
      <span>
        Excerpt
      </span>
    </p>
  </a>
</article>
`;

exports[`[presentation] <NewsListing /> when isCondensed is true matches snapshot 1`] = `
<article
  class="NewsListing isCondensed"
>
  <a
    href="/news/article-1"
  >
    <header
      class="NewsListing--header"
    >
      <h3>
        <div
          class="NewsArticleType NewsArticleType-news"
          title="News"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23 12l-2.44-2.78.34-3.68-3.61-.82-1.89-3.18L12 3 8.6 1.54 6.71 4.72l-3.61.81.34 3.68L1 12l2.44 2.78-.34 3.69 3.61.82 1.89 3.18L12 21l3.4 1.46 1.89-3.18 3.61-.82-.34-3.68L23 12zm-10 5h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
        </div>
        <span>
          Title
        </span>
      </h3>
    </header>
    <figure
      class="Image NewsListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt="Title"
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <p>
      <span>
        Excerpt
      </span>
    </p>
  </a>
</article>
`;
